Develop porfolio index page and styles.css. Add wow.min.js. Add images.

--- a/site_files/css/styles.css
+++ b/site_files/css/styles.css
@@ -127,6 +127,42 @@ img {
   width: 100%;
 }
 
+.negative-wrapper {
+  display: block;
+  margin-top: 2rem;
+  padding: 0;
+}
+
+.negative {
+  display: inline;
+  padding: 0.5rem;
+  background-color: black;
+  color: whitesmoke;
+  line-height: 2.1rem;
+  border-radius: 2px;
+}
+
+h2.negative {
+  display: inline-block;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 0.5rem;
+  text-align: left;
+  font-size: 1rem;
+}
+
+@media(min-width: 700px) {
+  h2.negative {
+    width: calc(80% + 2rem);
+  }
+}
+
+@media(min-width: 992px) {
+  h2.negative {
+    width: calc(75% + 4rem);
+  }
+}
+
 /* -----------
   NAV & FOOTER
   -----------*/
@@ -157,6 +193,32 @@ footer {
   background-color: #F8F9FA;
 }
 
+footer .row {
+  width: 90%;
+  margin: 0 auto;
+}
+
+footer hr {
+  /* Horizonatal rule in footer */
+  margin: 1.25rem auto 0;
+  width: 50%;
+}
+
+@media (min-width: 768px) {
+  /* HR is replaced by border as footer changes orientation */
+  footer hr {
+    display: none;
+  }
+
+  footer .links {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-left: 1px solid #575A5E;
+    border-right: 1px solid #575A5E;
+  }
+}
+
 footer .links a {
   display: block;
 }
@@ -164,6 +226,7 @@ footer .links a {
 .social-icon {
   text-align: center;
   width: 25px;
+  margin-bottom: 0.5rem;
 }
 
 @media (min-width: 768px) {
@@ -189,45 +252,75 @@ footer small {
 /* ------
   Header 
   -----*/
-.header {
+header {
   padding: 3rem 0 2rem;
 }
 
-.header h1 {
-  font-size: 1.5rem;
+header img {
+  max-width: 200px;
+  margin: 0 auto 1rem;
+  border-radius: 50%;
+  box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.258);
+  position: relative;
+  cursor: pointer;
+}
+
+.animate__animated.animate__backInLeft {
+  /* Duration */
+  -moz-animation-duration: 2s;
+  -o-animation-duration: 2s;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  /* Delay */
+  -moz-animation-delay: 0.5s;
+  -o-animation-delay: 0.5s;
+  -webkit-a•nimation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+
+header h1 {
+  font-size: 1.75rem;
   margin-bottom: 0.5rem;
 }
 
-.header h2 {
+header .tagline {
+  margin: 0 auto;
   font-size: 1.3rem;
 }
 
-.header p {
+header p {
   width: 90%;
   margin: 1.5rem auto 0;
+  font-size: 1.1rem;
+  line-height: calc(1em + 0.5rem);
 }
 
-/* ---------------
-  Project Displays
-  -------------- */
+/* ------------------------
+  Section: Project Displays
+  ----------------------- */
+.projects-wrapper {
+  /* width: 90%; */
+  margin: 0 auto;
+}
 .project-display {
   position: relative;
-  margin: 2rem 0 0;
+  width: 100%;
+  margin: 2.5rem auto 0;
   padding: 0;
   box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.258);
 }
 
 @media (min-width: 700px) {
   .project-display {
-    width: 45%;
-    margin: 1rem 0.5rem 0;
+    width: 40%;
+    margin: 1rem 1rem 1rem;
   }
 }
 
 @media (min-width: 992px) {
   .project-display {
-    width: 30%;
-    margin: 1.5rem 0.5rem 0;
+    width: 25%;
+    margin: 1rem 1rem;
   }
 }
 
@@ -247,8 +340,8 @@ footer small {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   text-align: center;
   background-color: rgb(47, 47, 47);
   color: white;
@@ -280,4 +373,47 @@ footer small {
 
 .project-display:hover .float-text {
   opacity: 1;
+}
+
+/* ---------------------------
+  Section: Relevant Experience 
+  ---------------------------*/
+.experience {
+  margin-top: 5rem;
+}
+
+.experience h2 {
+  margin-bottom: 1rem;
+}
+
+.exp-container {
+  margin: 1rem auto 0;
+  text-align: left;
+}
+
+@media(min-width: 700px) {
+  .exp-container {
+    width: calc(80% + 2rem);
+  }
+}
+
+@media(min-width: 992px) {
+  .exp-container {
+    width: calc(75% + 4rem);
+  }
+}
+
+.exp-container h3 {
+  margin-bottom: 1rem;
+  font-size: 1.25rem;
+
+}
+
+.experience ul {
+  margin-left: 1rem;
+}
+
+.experience li {
+  list-style-type: disc;
+  padding: 0.5rem 0;
 }
