--- a/site_files/css/styles.css
+++ b/site_files/css/styles.css
@@ -1,4 +1,22 @@
-/* CSS RESET */
+/*  CONTENTS
+
+1. CSS RESET
+2. PAGE STANDARDS
+3. NAVBAR & FOOTER
+4. HEADER
+   MAIN:
+    5. PROJECT DISPLAYS
+    6 RELEVANT EXPERIENCE
+    7.1 COURSES & CV CONTAINER
+    7.2 COURSES
+    7.3 CV
+*/
+
+
+
+/* -----------
+  1. CSS RESET
+  --------- */
 html,
 body,
 div,
@@ -112,13 +130,15 @@ ul {
   list-style: none;
 }
 
-/* END CSS RESET */
+a {
+  all: unset;
+}
+
 
 /* -------------
-  PAGE STANDARDS
+  2. PAGE STANDARDS
   ------------ */
 body {
-  font-size: 16px;
   font-family: 'Roboto Mono', monospace;
   text-align: center;
 }
@@ -133,7 +153,7 @@ img {
   padding: 0;
 }
 
-.negative {
+.negative-content {
   display: inline;
   padding: 0.5rem;
   background-color: black;
@@ -142,30 +162,34 @@ img {
   border-radius: 2px;
 }
 
-h2.negative {
+h2.negative-content {
   display: inline-block;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
   padding: 0 0.5rem;
   text-align: left;
   font-size: 1rem;
 }
 
 @media(min-width: 700px) {
-  h2.negative {
+  h2.negative-content {
     width: calc(80% + 2rem);
   }
 }
 
 @media(min-width: 992px) {
-  h2.negative {
+  h2.negative-content {
     width: calc(75% + 4rem);
   }
 }
 
-/* -----------
-  NAV & FOOTER
-  -----------*/
+section {
+  margin-bottom: 5rem;
+}
+
+/* --------------
+  3. NAV & FOOTER
+  --------------*/
 
 .navbar .container-fluid {
   padding: 0 1rem 0;
@@ -179,10 +203,52 @@ h2.negative {
 
 .navbar-brand {
   font-size: calc(0.75rem + 0.5vw);
+}  
+
+nav .links {
+  cursor: pointer;
+}
+
+/* Note below is MAX not MIN */
+@media(max-width: 992px) {
+  .navbar-collapse {
+    /* Stops collapsed text butting up against toggle */
+    margin-right: 5rem;
+  }
+
+  nav .links {
+    margin-left: 0.5rem;
+  }
 }
 
 .navbar-text {
   font-size: 0.8rem;
+}
+
+nav .links .navbar-text::before {
+  /* Adds a space before nav link */
+  content: "\00a";
+}
+
+nav .links .navbar-text::after {
+  /* Adds decoration after nav link */
+  content: " //";
+}
+
+nav .links .navbar-text:last-of-type::after {
+  /* Removes decoration from last nav link */
+  content: "";
+}
+
+#email-address {
+  margin-top: 1rem;
+}
+
+@media(min-width: 992px) {
+  #email-address {
+    margin-top: 0;
+    margin-left: 3rem;
+  } 
 }
 
 footer {
@@ -249,9 +315,9 @@ footer small {
   font-size: 0.75rem;
 }
 
-/* ------
-  Header 
-  -----*/
+/* ---------
+  4. Header 
+  --------*/
 header {
   padding: 3rem 0 2rem;
 }
@@ -283,9 +349,10 @@ header h1 {
   margin-bottom: 0.5rem;
 }
 
-header .tagline {
-  margin: 0 auto;
-  font-size: 1.3rem;
+header .tagline.negative-content{
+  margin: 0 auto 4rem;
+  font-size: 1.1rem;
+  padding: 0.2rem 0.5rem;
 }
 
 header p {
@@ -295,19 +362,25 @@ header p {
   line-height: calc(1em + 0.5rem);
 }
 
-/* ------------------------
-  Section: Project Displays
-  ----------------------- */
+/* ---------------------------
+  Main: 5. Project Displays
+  -------------------------- */
 .projects-wrapper {
-  /* width: 90%; */
   margin: 0 auto;
 }
+
 .project-display {
   position: relative;
   width: 100%;
   margin: 2.5rem auto 0;
   padding: 0;
   box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.258);
+  cursor: pointer;
+}
+
+.project-display:nth-child(2) {
+  /* Adjusts margin for first box */
+  margin-top: 0;
 }
 
 @media (min-width: 700px) {
@@ -315,6 +388,11 @@ header p {
     width: 40%;
     margin: 1rem 1rem 1rem;
   }
+
+  .project-display:nth-child(2) {
+    /* Readjusts margin for first box */
+    margin-top: 1rem;
+}
 }
 
 @media (min-width: 992px) {
@@ -364,7 +442,6 @@ header p {
   font-size: 0.8rem;
   line-height: 1rem;
   font-weight: 200;
-
 }
 
 .project-display:hover img {
@@ -376,16 +453,8 @@ header p {
 }
 
 /* ---------------------------
-  Section: Relevant Experience 
+  Main: 6. Relevant Experience 
   ---------------------------*/
-.experience {
-  margin-top: 5rem;
-}
-
-.experience h2 {
-  margin-bottom: 1rem;
-}
-
 .exp-container {
   margin: 1rem auto 0;
   text-align: left;
@@ -416,4 +485,96 @@ header p {
 .experience li {
   list-style-type: disc;
   padding: 0.5rem 0;
+}
+
+/* -------------------------------
+  Main: 7.1 Courses & CV Container
+  ------------------------------- */
+.courses-cv-wrapper {
+  margin: 0 auto 0;
+}
+
+@media (min-width: 992px) {
+  .courses-cv-wrapper {
+    width: calc(85% + 2rem);
+}
+
+  .courses-cv-wrapper h2.negative-content {
+    width: calc(80% + 4rem);
+  }
+}
+
+/* ---------------
+  Main: 7.2 Courses
+  ---------------*/
+.courses {
+  /* So that page view is not disrupted when cycling through carousel elements of varying heights */
+  min-height: 691px;
+}
+
+.card-container {
+  padding: 0;
+  margin: 0 auto 0;
+}
+
+@media(min-width: 700px) {
+  .card-container {
+    width: calc(80% + 2rem);
+  }
+}
+  
+@media(min-width: 992px) {
+  .card-container {
+    width: calc(75% + 4rem);
+  }
+}
+
+@media(min-width: 992px) {
+  .card {
+    min-height: 593px;
+  }
+}
+
+.card {
+  max-width: 400px;
+  margin: 0 auto 2rem;
+}
+
+.card p {
+  margin: 1rem auto;
+}
+
+.card li {
+  margin-left: 1.5rem;
+  margin-bottom: 1rem;
+  text-align: left;
+  list-style-type: disc;
+}
+
+.card-container .col-12:first-child img, 
+.carousel-item:first-child img {
+  /* Padding around Kent logo */
+  padding: 1rem 1rem 0;
+}
+
+.card-container .col-12:nth-child(2) p:last-child,
+.carousel-item:nth-child(2) p:last-child {
+  /* Margin for 'Codecademy' card final p */
+  margin-top: 2rem;
+}
+
+/* -------------
+  Main: 7.3 C.V
+  ----------- */
+.cv h2 {
+  display: block;
+}
+.cv img {
+  max-width: 500px;
+}
+
+@media(min-width: 992px) {
+  .cv img {
+    max-width: 400px;
+  }
 }
